# Sonic-Superstars-Dream-Team-Vita

./: .gitmodules  CMakeLists.txt  README.md
SonicMania/: Game.c
